Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/typeAnnotations/failures/common/innertypeparams/DuplicateTypeAnnotation.out
DuplicateTypeAnnotation.java:11:20: compiler.err.duplicate.annotation.missing.container: A
1 error
